# sigScan

./: .editorconfig  .eslintrc.json  .gitignore  .prettierignore  .versionrc.json  .vscodeignore  ARCHITECTURE.md  CHANGELOG.md  Claude.md  Features.md  Implementation.md  PRODUCTION_READY.md  README.md  SECURITY.md  TROUBLESHOOTING.md  commitlint.config.js  forge-gas-example.md  install  install-dev.sh  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml  build-extension.yml  build-runner.yml  cleanup-branches.yml  cleanup-stale-branches.yml  dependabot-auto-merge.yml  pr-validation.yml  release.yml
.husky/: commit-msg
data/: signatures.json
docs/: BUILDING.md  EXTENSION_GUIDE.md  INLINE-GAS-ANNOTATIONS.md  README.md
examples/: SimpleStorage.sol  VersionTest.sol
examples/foundry-dao/: foundry.toml
examples/foundry-defi/: foundry.toml
examples/hardhat-bridge/: hardhat.config.js
examples/hardhat-nft/: hardhat.config.js
examples/src/: GasDemo.sol
runner/: Cargo.toml
runner/src/: calldata.rs  compile.rs  evm.rs  main.rs  types.rs
scripts/: postinstall.js
src/: types.ts
src/__tests__/: cli-smoke.test.ts
src/cli/: index.ts
src/core/: cache.ts  exporter.ts  fs-provider.ts  parser.ts  scanner.ts  watcher.ts
src/extension/: extension.ts  manager.ts
src/features/: SolcManager.ts  abi.ts  access-control.ts  call-graph.ts  (+40 more)
(+57 files in other folders)
